[gd_scene load_steps=6 format=3 uid="uid://bbeskvul00umu"]

[ext_resource type="PackedScene" uid="uid://djucgldh3jbvf" path="res://escenas/entity/static/static.tscn" id="1_46hdu"]
[ext_resource type="Script" path="res://scripts/entity/static/bubble_coral.gd" id="2_2xu2v"]
[ext_resource type="Texture2D" uid="uid://c4ib37aehwqa4" path="res://img/static/coral.svg" id="3_sl7la"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_na1ji"]
points = PackedVector2Array(-35, 0, -15, -20, 15, -20, 35, 0, 20, 23, -20, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l37f"]
size = Vector2(69, 259.5)

[node name="Bubble Coral" instance=ExtResource("1_46hdu")]
position = Vector2(285, 874)
scale = Vector2(2, 2)
mass = 297.76
lock_rotation = true
freeze = true
script = ExtResource("2_2xu2v")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_sl7la")

[node name="CollisionShape2D" parent="." index="1"]
visible = true
position = Vector2(9, -28)
shape = SubResource("ConvexPolygonShape2D_na1ji")

[node name="BubbleSpawn1" type="Node2D" parent="." index="2"]
position = Vector2(9, -52)

[node name="BubbleSpawn3" type="Node2D" parent="." index="3"]
position = Vector2(-18, -38)

[node name="BubbleSpawn2" type="Node2D" parent="." index="4"]
position = Vector2(36, -38)

[node name="Observer" type="Area2D" parent="." index="5"]
position = Vector2(6, -96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Observer" index="0"]
visible = false
position = Vector2(3, -84)
shape = SubResource("RectangleShape2D_4l37f")

[node name="Node2D" type="Node2D" parent="." index="6"]
position = Vector2(-44, -20)

[node name="VisibleOnScreenNotifier2D" parent="." index="7"]
position = Vector2(8.25, -27)
scale = Vector2(3.525, 2.25)

[connection signal="body_entered" from="Observer" to="." method="_on_observer_body_entered"]
[connection signal="body_exited" from="Observer" to="." method="_on_observer_body_exited"]
